===========

New Features and Enhancements
-----------------------------
* Added CString class
   The CString class is intended to provide much of the same functionality
   as the CString class provided with MFC/ATL.
* Added CMenu   


Changes in detail
-----------------
- Added CMenu
- Added CString
- Added CFile
- Added BSTR2A
- Added BSTR2T
- Added BSTR2W
- Added CWinException::GetError
- Modified LoadString 				now returns CString
- Modified CWnd::GetAncestor		now accepts a gaFlags parameter
- Removed CLoadString


Incompatibilities with previous versions
----------------------------------------



Version 7.1
===========
New Features and Enhancements
-----------------------------
* Added support for Task Dialogs
* Added the following set of gdi classes: CBitmap, CBrush, CFont, CPalette, 
   CPen and CRgn. These work in cooperation with the existing CDC class.
* Added a set of new Text conversion functions based on classes.
   The complete set of functions are:
	A2BSTR		ANSI  to BSTR
	A2OLE		ANSI  to OLE
	A2T			ANSI  to TCHAR
	A2W			ANSI  to WCHAR
	OLE2A		OLE   to ANSI
	OLE2T		OLE   to TCHAR
	OLE2W		OLE   to WCHAR
	T2A			TCHAR to ANSI
	T2BSTR		TCHAR to BSTR
	T2OLE       TCHAR to OLE
	T2W			TCHAR to Wide
	W2A			WCHAR to ANSI
	W2BSTR		WCHAR to BSTR
	W2OLE		WCHAR to OLE
	W2T			WCHAR to TCHAR
   Refer to the help documentation for instructions on using these functions.
* Added CLoadString (and LoadString) to return a string resource. 
* OnEraseBkgnd is now called automatically when a CWnd's background needs
   erasing. Return TRUE to prevent default erasure.
* Scribble Tutorial now demonstrates the use of command line arguments
* Enhanced CResizer.
   - The anchor points are now fixed instead of proportional
   - Scrollbars are now added when required.
   - Added the DialogResizing sample to demonstrate CResizers' new features.
* Create now use a CWnd pointer instead of a HWND when specifying the 
   parent window.