@@ -26,7 +26,7 @@ void CView::PreCreate(CREATESTRUCT &cs)
 	cs.dwExStyle = WS_EX_CLIENTEDGE;
 }
 
-void CView::RegisterClass(WNDCLASS &wc)
+void CView::PreRegisterClass(WNDCLASS &wc)
 {
 	// Here we set the Window class parameters.
 	// Preforming this is optional, but doing so allows us to
