@@ -17,7 +17,7 @@ protected:
 	virtual void OnInitialUpdate();
 	virtual void OnPaint(CDC& dc);
 	virtual void PreCreate(CREATESTRUCT &cs);
-	virtual void RegisterClass(WNDCLASS &wc);
+	virtual void PreRegisterClass(WNDCLASS &wc);
 	virtual LRESULT WndProc(UINT uMsg, WPARAM wParam, LPARAM lParam);
 };
 
